...
  val markerState = remember { MarkerState(position = location.toLatLng()) }

  MarkerComposable(
      keys = arrayOf(username),
      state = markerState,
      title = username,
      tag = tag,
      anchor = Offset(0.5f, 1f),
      onClick = {
        onClick()
        true
      }) {
        MarkerContent(username = username)
...
